# qwen3-tts.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  loopback_test.py  pyproject.toml
docs/: benchmarking-frameworks.md
python/: demo_streaming.py  loopback_test.py  test_streaming.py  web_asr_answer.py  web_loopback.py  web_streaming.py  web_streaming_client.py
python/qwen3_tts/: __init__.py
scripts/: benchmark_frameworks.ps1  benchmark_python_framework.py  convert_tts_to_gguf.py  dump_qwen3_reference_codes.py
src/: asr_paraformer_impl.cpp  asr_pipeline.cpp  asr_pipeline.h  asr_sensevoice_impl.cpp  asr_vad_impl.cpp  audio_tokenizer_decoder.h  funasr_vad.h  main.cpp  paraformer_asr.h  qwen3_tts.cpp  qwen3_tts.h  qwen3_tts_c.cpp  qwen3_tts_c.h  qwen3_tts_quantize.cpp  sensevoice_asr.h  silero_vad.h  speech_tokenizer_encoder.cpp  text_tokenizer.cpp  text_tokenizer.h  tts_transformer.cpp  tts_transformer.h
src/common/: audio_io.cpp
src/decoder/: decoder_cache.cpp  decoder_loader.cpp  decoder_runtime.cpp  decoder_state_internal.h
src/encoder/: encoder_frontend.cpp  encoder_state_internal.h
src/pipeline/: pipeline_internal.h  pipeline_models.cpp  pipeline_synthesize.cpp
src/transformer/: transformer_cache.cpp  transformer_embeddings.cpp  transformer_generate.cpp  transformer_graph_code_pred.cpp  transformer_graph_talker.cpp  transformer_internal.h  transformer_loader.cpp  transformer_loader_tensors.cpp  transformer_runtime.cpp  transformer_runtime_code_pred.cpp  transformer_sampling.h  (+2 more)
tests/: test_decoder.cpp  test_multi_session.cpp
