[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts"
version = "0.1.0"
description = "Python bindings for libqwen3_tts via ctypes"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
audio = ["soundfile"]

[tool.setuptools.packages.find]
where = ["python"]
