[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts"
version = "0.1.0"
description = """
Python bindings for libqwen3_tts via ctypes, with a WebSocket streaming server
for browser-based TTS.

Quick start - WebSocket streaming server:
  uv run python/web_streaming.py <model_dir> --port 8765 --refs-dir refs

Example:
  uv run python/web_streaming.py models --port 8765 --refs-dir refs
"""
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
audio = ["soundfile"]
web = ["aiohttp"]

[project.urls]
Source = "https://github.com/Danmoreng/qwen3-tts.cpp"
WebStreaming = "https://github.com/Danmoreng/qwen3-tts.cpp#web-streaming-server"

[tool.setuptools.packages.find]
where = ["python"]
